--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,27 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   * {
-    font-family: 'Montserrat', serif;
+    font-family: "Montserrat", serif;
+  }
+}
+
+@layer utilities {
+  .active-subnav {
+    @apply bg-t_primary-200 rounded-md;
+  }
+  .active-nav {
+    @apply bg-t_primary-700 text-white font-semibold data-[state=open]:hover:bg-t_primary-700 data-[state=open]:hover:text-white;
   }
 
+  .active-nav img {
+    filter: invert(1);
+  }
 
+  /* button ~ a.active {
+    @apply bg-t_primary-200 rounded-md;
+  }
+
+  a.active {
+    @apply bg-t_primary-700 text-white font-semibold;
+  } */
 }
