feat: add sidebar page

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@
     @apply bg-t_primary-100 hover:bg-t_primary-100 rounded-md;
   }
   .active-nav {
-    @apply bg-t_primary-700 text-white font-semibold data-[state=open]:hover:bg-t_primary-700 data-[state=open]:hover:text-white;
+    @apply bg-t_primary-700 hover:bg-t_primary-700 text-white font-semibold data-[active=true]:hover:bg-t_primary-700 data-[active=true]:hover:text-white;
   }
 
   .active-nav img {
