--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,15 @@
     box-sizing: border-box;
     /* @apply lg:text-[14px] 2xl:text-[16px]; */
   }
+
+  input[type="file"]::-webkit-file-upload-button {
+    height: 100%;
+    padding: 0 1rem;
+    font-weight: 600;
+    margin-right: 1rem;
+    @apply bg-t_secondary-100
+  }
+
 }
 
 @layer utilities {
@@ -103,7 +112,6 @@
     transition: opacity 0.2s ease-in;
   }
 
-
   .animate-detail-btn {
     width: 2.25rem;
     @apply bg-t_secondary-300;
@@ -125,7 +133,6 @@
     opacity: 100%;
     transition: opacity 0.2s ease-in;
   }
-
 }
 
 #dob-calendar .rdp-caption_dropdowns .rdp-vhidden {
