--- a/src/index.css
+++ b/src/index.css
@@ -73,9 +73,18 @@
     padding: 0 1rem;
     font-weight: 600;
     margin-right: 1rem;
-    @apply bg-t_secondary-100
+    @apply bg-t_secondary-100;
   }
 
+  h1,
+  h2 {
+    @apply font-semibold;
+  }
+
+  h3,
+  h4 {
+    @apply font-medium;
+  }
 }
 
 @layer utilities {
