--- a/src/index.css
+++ b/src/index.css
@@ -168,6 +168,10 @@
   }
 }
 
+@utility background-dim {
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
