--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
   --color-destructive: hsl(var(--destructive));
   --color-destructive-foreground: hsl(var(--destructive-foreground));
 
-  --color-border: hsl(var(--border));
+  --color-border: hsl(var(--border)); 
   --color-input: hsl(var(--input));
   --color-ring: hsl(var(--ring));
 
@@ -181,7 +181,8 @@
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 100%;
-    --border: 240 5.9% 90%;
+    /* --border: 240 5.9% 90%; */
+    --border: 220 13% 91%;
     --input: 240 4.9% 83.9%;
     --ring: 240 5% 64.9%;
     --radius: 0.5rem;
@@ -225,12 +226,15 @@
   }
   * {
     font-family: "Montserrat", serif;
+    border-color: hsl(var(--border));
   }
 
   input[type="file"] {
     font-style: italic;
     color: var(--color-gray-500);
   }
+
+  
 }
 
 #dob-calendar .rdp-caption_dropdowns .rdp-vhidden {
