--- a/src/index.css
+++ b/src/index.css
@@ -233,6 +233,18 @@
     font-style: italic;
     color: var(--color-gray-500);
   }
+
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 }
 
 #dob-calendar .rdp-caption_dropdowns .rdp-vhidden {
