--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,22 @@
       max-height: 550px;
     }
   }
+
+  @keyframes zoom-in-out {
+    0% {
+      transform: scale(1);
+    }
+    30% {
+      transform: scale(1.3);
+    }
+    80% {
+      transform: scale(0.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
 }
 
 /*
